# Tesseract-Simple-Implementation

./: CMakeLists.txt  README.md  main.cpp  mainConfig.h.in
